<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright 2016 Makoto Consulting Group, Inc.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<resources>

    <string name="app_name">Policy Debate Timer</string>
    <string name="title_activity_policy">Policy Debate Timer</string>
    <string name="title_activity_speech_pager">Current Policy Speech</string>
    <string name="title_activity_settings">Settings</string>
    
    <string name="settings">Settings</string>
    
    <string name="speech_list_title">Select Speech</string>
    
    <!-- Context Menu Options -->
    <string name="reset">Reset</string>
    <string name="exhaust">Exhaust (set to 0)</string>
    <string name="setto">Set To&#8230;</string><!-- &#8230; is the Ellipsis (...) -->

    <string name="default_timer_text">00:00</string>
    <string name="default_speech_title_text">SPEECH TITLE GOES HERE</string>

    <string name="label_speech_timer">Speech Timer</string>
    <string name="label_crossex_timer">Cross Examination</string>
    <string name="label_affprep_timer">Affirmative Prep Timer</string>
    <string name="label_negprep_timer">Negative Prep Timer</string>
    
    <!-- Speeches -->
    <string name="cross_ex">Cross-Ex</string>
    <string name="speech_1ac">1AC</string>
    <string name="speech_1nc">1NC</string>
    <string name="speech_2ac">2AC</string>
    <string name="speech_2nc">2NC</string>
    <string name="speech_1nr">1NR</string>
    <string name="speech_1ar">1AR</string>
    <string name="speech_2nr">2NR</string>
    <string name="speech_2ar">2AR</string>
    
    <!-- Default Values (for Settings) -->
    <string name="default_constructive_speech_time">8</string>
    <string name="default_rebuttal_time">5</string>
    <string name="default_crossex_time">3</string>
    <string name="default_prep_time">8</string>
    
    <string name="minutes_seconds_picker_title">Set Timer To:</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    
    <!-- Preferences -->
    <!-- Category Titles -->
    <string name="pref_cat_title_speech_times">Speech Times (Minutes)</string>
    <string name="pref_cat_title_alarm">Alarm</string>
    <string name="pref_cat_title_general">General</string>
    <!-- Titles -->
    <string name="pref_title_alarm_notify_at_expiration">Notify at Expiration?</string>
    <string name="pref_title_constructive_speech_time">Constructive</string>
    <string name="pref_title_rebuttal_time">Rebuttal</string>
    <string name="pref_title_crossex_time">Cross Ex</string>
    <string name="pref_title_prep_time">Prep</string>
    <string name="pref_title_showTenthsOfSeconds">Show Tenths of Seconds?</string>
    <string name="pref_title_animateTimerWhenBelowThreshold">Animate Timer When Below 1 Minute?</string>
    <!-- Summaries -->
    <string name="pref_summary_alarm_notify_at_expiration">Plays a notification sound when a timer reaches zero</string>
    
    <string name="rate_application_title">Rate This App</string>
    <string name="rate_application_ramble">If you enjoy this app, please take a moment and rate it!</string>
    <string name="rate_application_rate_button">Click to Rate</string>
    <string name="rate_application_remind_me_later">Remind Me Later</string>
    <string name="rate_application_do_not_ask_again">Do Not Ask Again</string>
    <string name="market_uri_prefix">market://details?id=</string>
    
    <string name="about">About This App</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="makoto_droid_icon">Makoto Consulting Group Inc</string>
    
</resources>
